<resources>
    <string name="app_name">Bimbingan Informatika</string>
    <string name="login">LogIn</string>
    <string name="btn_login">Masuk</string>
    <string name="input_login">Masukkan NPM/NIK</string>
    <string name="npm">NPM/NIK</string>
    <string name="password">Password</string>
    <string name="no_have_account">Belum memiliki akun?</string>
    <string name="register_here">Daftar </string>
    <string name="title_activity_list">Bimbingan Informatika</string>
    <string name="name">Nama</string>
    <string name="name_input">Masukkan Nama</string>
    <string name="npm_input">Masukkan NPM/NIK</string>
    <string name="password_input">Masukkan Password</string>
    <string name="register">Daftar</string>
    <string name="have_account">Sudah memliki akun?</string>
    <string name="login_here">Masuk</string>

    <string name="guidance_name">Nama Bimbingan</string>
    <string name="lecturer">Dosen</string>
    <string name="note">Note</string>
    <string name="insert_guidance">Masukkan Bimbingan</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="delete_course">Delete</string>

    <string name="time_format">%1$s, %2$s - %3$s</string>
    <string name="time">Time</string>
    <string name="empty_list_message">No courses added yet</string>
    <string name="_00_00">00:00</string>

</resources>